fix f43dit