@@ -1,5 +1,6 @@
 package com.faendir.om.online.remote
 
+import io.github.classgraph.ClassGraph
 import java.io.File
 
 
@@ -8,18 +9,17 @@ object JvmStarter {
     private const val MAX_MEM = 512
     fun exec(klass: Class<*>, vararg args: String) {
         val javaHome = System.getProperty("java.home")
-        val javaBin = javaHome +
-                File.separator.toString() + "bin" +
-                File.separator.toString() + "java"
-        val classpath = System.getProperty("java.class.path")
-        val className = klass.name
-        val command = listOf<String>(javaBin,
+        val javaBin = javaHome + File.separator.toString() + "bin" + File.separator.toString() + "java"
+        val classpath = ClassGraph().classpath
+        val command = listOf<String>(
+            javaBin,
             "-Xmx${MAX_MEM}m",
-            "-Xms${MAX_MEM /8}m",
+            "-Xms${MAX_MEM / 8}m",
             "-cp", classpath,
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
             "-Djava.security.manager",
             "-Djava.security.policy==java.policy",
-            className,
+            klass.name,
             *args
         )
         val builder = ProcessBuilder(command)
